--- a/src/css/quasar.variables.styl
+++ b/src/css/quasar.variables.styl
@@ -9,11 +9,21 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   = #027BE3
-$secondary = #26A69A
+// $primary   = #027BE3
+// $secondary = #26A69A
+// $accent    = #9C27B0
+
+// $positive  = #21BA45
+// $negative  = #C10015
+// $info      = #31CCEC
+// $warning   = #F2C037
+
+
+$primary   = #3c519e
+$secondary = #7687c4
 $accent    = #9C27B0
 
-$positive  = #21BA45
+$positive  = #21ba45
 $negative  = #C10015
-$info      = #31CCEC
+$info      = #666666
 $warning   = #F2C037
